se culmina items de la prueba
