# app/Models/Product.php
@@ -54,3 +54,19 @@ class Product extends Model
 
 
 }
+
+/* DOCUMENTATION  */    
+
+/**
+ * @OA\Schema(
+ * schema="ProductCreate",
+    * description="<b> Register Product model</b> <br>",
+    * @OA\Property(title="Name",property="name",description="Name of the product",type="string",example="Mi producto"),
+    * @OA\Property(title="Description",property="description",description="Description of the product",type="string",example="Hola esta es mi primer producto"), 
+    * @OA\Property(title="Stock",property="stock",description="stock of the product",type="integer",example=20), 
+    * @OA\Property(title="Sku",property="sku",description="Sku of the product",type="string",example="REF123"),
+    * @OA\Property(title="Price",property="price",description="price of the product",type="decimal",example=50000), 
+    * @OA\Property(title="Category",property="category_id",description="Category of the product",type="string",example=3),
+    * @OA\Property(title="Image",property="image",description="Image of the product",format="binary",type="string"),
+ * )
+ */
